--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -91,14 +91,14 @@ tbody tr {
 }
 
 #draft_status_container {
-    padding: 5px;
-    margin: 0px 0px 10px 0px;
-    background: #F9F9F9;
     color: #000;
-    div {
-        display: inline;
-        padding: 3px;
-        &.label {
+    width: 50%;
+    & > div{
+        float: left;
+    }
+    .label{
+        padding: 0 10px;
+        span{
             font-weight: bold;
         }
     }
@@ -116,19 +116,17 @@ tbody tr {
 
 div #mm_team_draft_picks {
     div {
-        display: inline;
-        padding: 3px;
         &.label {
-            font-weight: bold;
+            span{
+                font-weight: bold;
+            }
         }
     }
     ul {
         list-style-type: none;
-
         li {
-            float: left; padding: 4px;
-            background: #F9F9F9;
-            color: #000;
+            float: left;
+            padding-right: 10px;
         }
     }
 }
@@ -384,4 +382,33 @@ div.regions_container {
 .southwest_region {
     color: green;
     padding: 2px;
+}
+
+.draft_menu {
+    background: #F1F1F1;
+    border: 1px solid #D2D2D2;
+    border-right: none;
+    border-left: none;
+    padding: 0 10px;
+    display: block;
+    position: relative;
+    a{
+        font-size: 11px;
+    }
+}
+
+#my_team{
+    position: absolute;
+    z-index: 10;
+    left: 45%;
+}
+
+.sub_draft_menu{
+    background: #f5f5f5;
+    padding: 10px;
+    display: block !important;
+    border-bottom: 1px solid #ccc;
+    & > div{
+        float: left;
+    }
 }
