--- a/app/views/mm_teams/preferred_players.html.erb
+++ b/app/views/mm_teams/preferred_players.html.erb
@@ -1,9 +1,20 @@
+<div class="draft_menu">
+  <% if !session[:mm_team_id].nil? %>
+    <%= link_to 'Manage Draft', draft_index_path, :class=> "btn left float-left" %>
+    <%= link_to 'Manage Preferred Players', preferred_players_mm_team_url(get_team_for_current_user), :class=> "btn right float-left on" %>
+  <% end %>
+
+  <%= link_to 'My Team', "#", :data => { :team => get_team_for_current_user.id }, :id => "my_team", :class => "btn float-left blue" %>
+
+  <div class="clear"></div>
+</div>
+
 <div class="left_container">
 
-    <div id="preferred_players_container">
-        <%= render "shared/preferred_player_list" %>
-    </div>
-  
+  <div id="preferred_players_container">
+    <%= render "shared/preferred_player_list" %>
+  </div>
+
 </div>
 
 <div class="right_container">
