--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -339,6 +339,14 @@ textarea {
     background: #fff;
 }
 
+.roster_container {
+  float: left;
+  margin: 0px;
+  padding: 1% 3%;
+  width: 100%;
+  height: 100%;
+}
+
 .module_header {
     padding: 10px;
     color: #242424;
