--- a/app/views/mm_teams/rosters.html.erb
+++ b/app/views/mm_teams/rosters.html.erb
@@ -7,9 +7,9 @@
         <table class="my_team_table">
           <thead>
           <tr>
-            <th rowspan="2" class="name">Team Owner</th>
-            <th rowspan="2" class="ppg">#</th>
+            <th rowspan="2" class="name">Team Name</th>
             <th rowspan="2" class="name">Name</th>
+            <th rowspan="2" class="ppg">#</th>
             <th rowspan="2" class="position">Position</th>
             <th rowspan="2" class="ppg">PPG.</th>
             <th rowspan="2" class="school">School</th>
@@ -23,12 +23,12 @@
           <% @players.each_with_index do |ncaa_player, index| %>
               <tr class="<%= (index + 1) %2 == 0 ? 'even' : 'odd'%>">
                 <% if ncaa_player.draft_pick.mm_team_id != @previous_mm_team_id %>
-                    <td class="name"><%= ncaa_player.draft_pick.mm_team.name %></td>
+                    <td class="name"><strong><%= ncaa_player.draft_pick.mm_team.name %></strong></td>
                 <% else %>
-                    <td style="background-color: black"></td>
+                    <td>-----------</td>
                 <% end %>
-                <td class="ppg"><%= ncaa_player.jersey_number %></td>
                 <td class="name"><%= ncaa_player.full_name %></td>
+                <td class="ppg"><%= ncaa_player.jersey_number %></td>
                 <td class="position"><span class="<%=get_position_css_class ncaa_player.position %>"><%= ncaa_player.position %></span></td>
                 <td class="ppg"><%= ncaa_player.ppg_avg %></td>
                 <td class="school"><%= ncaa_player.ncaa_team.school %></td>
